# protein_structure_tractability

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: brca1_report.md
src/tractable/: __init__.py  agent.py  compute.py  purification.py  qc.py  schema.py  scoring.py  ui.py
src/tractable/tools/: __init__.py
tests/: test_compute.py  test_qc.py  test_scoring.py
tests/fixtures/: alphafold_meta__O95260.json  alphafold_meta__P38398.json  alphafold_meta__P42336.json  alphafold_meta__Q6SZW1.json  alphafold_plddt__O95260.json  alphafold_plddt__P38398.json  alphafold_plddt__P42336.json  alphafold_plddt__Q6SZW1.json  ncbi__O95260.json  ncbi__P38398.json  ncbi__P42336.json  ncbi__Q6SZW1.json  pmc_id__24073851.json  pmc_id__24900786.json  pmc_id__26778126.json  pmc_id__36550129.json  pmc_id__39068213.json  pmc_id__39964720.json  pmc_id__40595496.json  pmc_methods__11283454.json  pmc_methods__11874154.json  pmc_methods__12214830.json  pmc_methods__4747905.json  pmc_methods__9780360.json  pubmed_abstract__16101277.json  pubmed_abstract__24073851.json  pubmed_abstract__24900786.json  pubmed_abstract__26774655.json  pubmed_abstract__26778126.json  pubmed_abstract__28433539.json  pubmed_abstract__33053563.json  pubmed_abstract__36550129.json  pubmed_abstract__39068213.json  pubmed_abstract__39964720.json  pubmed_abstract__40595496.json  rcsb_citations__1Y98_4IFI_4IGK_4Y2G_8RS8.json  rcsb_citations__4L1B_4ZOP_5FI4_5UK8_5UKJ.json  rcsb_citations__7CM5_7CM7_8GQ5_9L2D_9L2E.json  rcsb_citations__7CM7_8GQ5_9L2D.json  rcsb_citations__8TZV.json  (+15 more)
